--- a/style.css
+++ b/style.css
@@ -43,8 +43,6 @@ body{
     flex-direction: column;
      width: 50%;
     align-items: center;
-   
-  
 }
 .name{
     font-size: 40px;
@@ -125,9 +123,10 @@ table td ,th{
 }
 .top-head{
     text-align: center;
-    font-size: 40px;
+    font-size: 20px;
     font-weight: 800;
     color: white;
+    margin: 20px;
     text-transform: uppercase;
 }
 
@@ -137,6 +136,7 @@ text-decoration: none;
 padding: 10px;
 border: 2px yellow solid;
 border-radius: 30px;
+margin: 5px;
 
 }
 .navs{
@@ -146,7 +146,53 @@ border-radius: 30px;
     margin: 20px;
     justify-content: space-around;
 }
+.Proffesional-Training {
+  color: white;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  
+  
+}
+.Proffesional-Training .name , .projectname{
+    font-size: 20px;
+    
+}
+.training{
+    background-color: gray;
+    padding: 30px;
+    color: black;
+    border-radius: 10px;
+    margin: 20px;
+}
+.desc{
+    font-style: italic;
+}
 
+.projectlist{
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 50px;
+}
+.project{
+
+    padding: 50px;
+    border: 5px yellow solid;
+    margin: 20px;
+    border-radius: 10px;
+
+}
+.projectname , .role{
+    color: yellow;
+    font-weight: 900;
+    margin: 10px;
+}
+
+.role{
+    margin-left: 60%;
+}
 @media screen and (max-width: 768px){
     .header{
         background-color: rgb(0, 0, 0);
